fixing skill font size on tablet

--- a/wp-content/themes/jtwebfolio/assets/sass/_650up.scss
+++ b/wp-content/themes/jtwebfolio/assets/sass/_650up.scss
@@ -9,49 +9,5 @@
 		}
 	}
 	//.main-banner
-	.home-skills{
-		.skills-list-wrap {
-			.skills-list {
-				@include clearfix;
-				padding-bottom:0;
-				.skill {
-					margin-right:4%;
-					margin-top:-25px;
-					width:17.2%;
-					&:nth-child(3) {
-						margin-right:2%;
-					}
-					&:nth-child(4) {
-						margin-left:0;
-					}
-					&:nth-child(4),
-					&:nth-child(5) {
-						margin-top:-25px;
-					}
-					&:nth-child(5) {
-						margin-right:0;
-					}
-					.skill-icon {
-						&:after {
-							display:none !important;
-						}
-					}
-					.skill-text {
-						height:auto;
-						-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-						filter: alpha(opacity=100);
-						opacity: 1;
-						padding-top:8px;
-						position:static;
-						p {
-							font-size:14px;
-						}
-					}
-				}
-			}
-		}
-		//.skills-list-wrap
-	}
-	//.home-skills
 }
 //.site-content
